Make show answer buttons work on bookmarks page

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -19,7 +19,9 @@
     </header>
 
     <section class="quizcard">
-      <p class="quizcard__question">Question 1</p>
+      <p class="quizcard__question">
+        What is the two-dimensional grid-based layout system in CSS called?
+      </p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
       </button>
@@ -28,10 +30,7 @@
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <p
-        class="quizcard__answer quizcard__answer-hide"
-        data-js="quizcard-answer"
-      >
+      <p class="quizcard__answer revealAnswer" data-js="quizcard-answer">
         CSS Grid
       </p>
       <button class="bookmark" data-js="bookmark-button">
@@ -51,7 +50,7 @@
     </section>
 
     <section class="quizcard">
-      <p class="quizcard__question">Question 2</p>
+      <p class="quizcard__question">Which flex-directions are there in CSS?</p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
       </button>
@@ -60,11 +59,8 @@
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <p
-        class="quizcard__answer quizcard__answer-hide"
-        data-js="quizcard-answer"
-      >
-        flex direction
+      <p class="quizcard__answer revealAnswer" data-js="quizcard-answer">
+        row, column and more
       </p>
       <button class="bookmark" data-js="bookmark-button">
         <img
@@ -83,7 +79,7 @@
     </section>
 
     <section class="quizcard">
-      <p class="quizcard__question">Question 3</p>
+      <p class="quizcard__question">Which values can a boolean have?</p>
       <button class="quizcard__answerButton" data-js="quizcard-answer-button">
         Show Answer
       </button>
@@ -92,11 +88,8 @@
         <li class="quizcard__tag-item"><button>#flexbox</button></li>
         <li class="quizcard__tag-item"><button>#css</button></li>
       </ul>
-      <p
-        class="quizcard__answer quizcard__answer-hide"
-        data-js="quizcard-answer"
-      >
-        javaScript
+      <p class="quizcard__answer revealAnswer" data-js="quizcard-answer">
+        true or false
       </p>
       <button class="bookmark" data-js="bookmark-button">
         <img
